--- a/client/src/nav.css
+++ b/client/src/nav.css
@@ -17,10 +17,6 @@ li {
     list-style: none;
 }
 
-.list1 {
-    margin-right: 40%;
-}
-
 .main-nav {
     width: 100%;
     height: 70px;
@@ -73,8 +69,9 @@ li {
     color: black;
     font-weight: 900;
     font-size: 20px;
-    width: 300px;
+    width: 80px;
     margin-top: 30px;
+    margin-left: 500px;
 }
 
 .main-list {
@@ -102,4 +99,122 @@ li {
 
 .creater {
     font-weight: 900;
+}
+
+/* Responsive*/
+
+@media(max-width:1500px) {
+    .nav-bar {
+        color: #0F2C67;
+        font-weight: 900;
+        font-size: 20px;
+        width: 300px;
+        margin-right: 5px;
+        margin-top: 30px;
+    }
+
+    .Box {
+        margin: auto;
+        margin-top: 140px;
+        text-align: center;
+        width: 700px;
+        height: 30rem;
+        background: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(15px);
+    }
+
+    .input-box {
+        background: rgba(255, 255, 255, 0.4);
+        border: none;
+        border-radius: 5px;
+        width: 500px;
+        height: 30px;
+        font-family: sans-serif;
+        margin-top: 100px;
+        padding-left: 15px;
+        outline: none;
+    }
+}
+
+
+@media(max-width:900px) {
+    .nav-bar {
+        color: #0F2C67;
+        font-weight: 900;
+        font-size: 20px;
+        width: 100px;
+        margin-top: 30px;
+    }
+
+    .Box {
+        margin: auto;
+        margin-top: 200px;
+        text-align: center;
+        width: 450px;
+        height: 20rem;
+        background: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(15px);
+    }
+
+    .input-box {
+        background: rgba(255, 255, 255, 0.4);
+        border: none;
+        border-radius: 5px;
+        width: 400px;
+        height: 30px;
+        font-family: sans-serif;
+        margin-top: 50px;
+        padding-left: 15px;
+        outline: none;
+    }
+
+    .nav-list {
+        color: black;
+        font-weight: 900;
+        font-size: 20px;
+        width: 80px;
+        margin-top: 30px;
+        margin-left: 300px;
+    }
+}
+
+@media(max-width:470px) {
+    .nav-bar {
+        color: #0F2C67;
+        font-weight: 900;
+        font-size: 20px;
+        width: 800px;
+        margin-top: 30px;
+    }
+
+    .Box {
+        margin: auto;
+        margin-top: 200px;
+        text-align: center;
+        width: 300px;
+        height: 20rem;
+        background: rgba(255, 255, 255, 0.4);
+        backdrop-filter: blur(15px);
+    }
+
+    .input-box {
+        background: rgba(255, 255, 255, 0.4);
+        border: none;
+        border-radius: 5px;
+        width: 300px;
+        height: 30px;
+        font-family: sans-serif;
+        margin-top: 50px;
+        padding-left: 15px;
+        outline: none;
+    }
+
+    .nav-list {
+        color: black;
+        font-weight: 900;
+        font-size: 20px;
+        width: 80px;
+        margin-top: 30px;
+        margin-left: 200px;
+    }
 }
