--- a/client/src/nav.css
+++ b/client/src/nav.css
@@ -17,6 +17,15 @@ li {
     list-style: none;
 }
 
+.Box button {
+    background-color: #8CC0DE;
+    border: none;
+    cursor: pointer;
+    width: 800px;
+    height: 40px;
+    margin-top: 2%;
+}
+
 .main-nav {
     width: 100%;
     height: 70px;
